feat:add new page

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,8 @@
       "esnext",
       "dom",
       "dom.iterable",
-      "scripthost"
+      "scripthost",
+      "ES2015.promise"
     ]
   },
   "include": [
